Initialized NN Solver

--- a/dev_notebooks/scipy_integration_diffusion.ipynb
+++ b/dev_notebooks/scipy_integration_diffusion.ipynb
@@ -5,9 +5,11 @@
    "id": "87873f76",
    "metadata": {},
    "source": [
-    "## **SciPy Integration on 1-D Diffusion**\n",
+    "## **1D Diffusion Approximated via SciPy Integration**\n",
     "\n",
-    "**6/22** For this, I utilized SciPy's integrate library. Specifically, I used the solve_ivp function and the RK45 method of integration, which is a built in parameter for the function. \n",
+    "**6/21** \n",
+    "<br>\n",
+    "For this, I utilized SciPy's integrate library. Specifically, I used the solve_ivp function and the RK45 method of integration, which is a built in parameter for the function. \n",
     "<br>\n",
     "The RK45 method is an adaptive Runge-Kutta method accurate to the 4th-5th order and a good mix of speed and accuracy. There are a few other methods which could be of use to us, though. \n",
     "<br>\n",
@@ -40,7 +42,6 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.animation import FuncAnimation\n",
     "from scipy.integrate import solve_ivp\n",
-    "import seaborn as sns\n",
     "\n",
     "# Domain parameters\n",
     "L = 1.0                             # Length of the domain\n",
