--- a/dev_notebooks/homemade_rk4_diffusion.ipynb
+++ b/dev_notebooks/homemade_rk4_diffusion.ipynb
@@ -5,9 +5,9 @@
    "id": "38618bc4",
    "metadata": {},
    "source": [
-    "### **Solving the 1D diffusion equation via RK4**\n",
+    "# **1D Diffusion Approximated via Self-Built RK4**\n",
     "**5/14**\n",
-    "First crack at RK4 methods to solve our test case. See research notebook. Equation:\n",
+    "<br>First crack at RK4 methods to solve our test case. See research notebook. Equation:\n",
     "$$\\frac{\\partial u}{\\partial t} = D \\frac{\\partial^2 u}{\\partial x^2}$$\n",
     "Initial Conditions:\n",
     "$$u = \\sin(\\pi x)$$\n",
