--- a/dev_notebooks/scipy_integration_diffusion.ipynb
+++ b/dev_notebooks/scipy_integration_diffusion.ipynb
@@ -5,7 +5,7 @@
    "id": "87873f76",
    "metadata": {},
    "source": [
-    "## **1D Diffusion Approximated via SciPy Integration**\n",
+    "# **1D Diffusion Approximated via SciPy Integration**\n",
     "\n",
     "**6/21** \n",
     "<br>\n",
@@ -18,6 +18,14 @@
     "Another potentially useful method is the LSODA method, which is made for unknown systems and automatically switches between stiff and non-stiff methods, it's accuracy can range, though, from 1st-12th order, so it has a special use case. \n",
     "<br>\n",
     "Radau (implicit RK) and BDF (backward Euler) are made for stiffer systems, apparently \"stable for tricky PDEs.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87086736",
+   "metadata": {},
+   "source": [
+    "$$\\frac{\\partial u}{\\partial t} = D \\frac{\\partial^2 u}{\\partial x^2}$$"
    ]
   },
   {
