--- a/dev_notebooks/nn_diffusion.ipynb
+++ b/dev_notebooks/nn_diffusion.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c1df7a57",
    "metadata": {},
    "outputs": [
@@ -46,17 +46,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Loss: 0.6393414735794067\n",
-      "Epoch 200, Loss: 0.012466865591704845\n",
-      "Epoch 400, Loss: 0.0007260034326463938\n",
-      "Epoch 600, Loss: 0.00022317437105812132\n",
-      "Epoch 800, Loss: 0.00016100905486382544\n",
-      "Epoch 1000, Loss: 9.644849342294037e-05\n",
-      "Epoch 1200, Loss: 9.006887557916343e-05\n",
-      "Epoch 1400, Loss: 7.283335435204208e-05\n",
-      "Epoch 1600, Loss: 5.6165317801060155e-05\n",
-      "Epoch 1800, Loss: 5.35427825525403e-05\n",
-      "Epoch 1999, Loss: 7.259444100782275e-05\n"
+      "Epoch 200, Loss: 0.0126056969165802\n",
+      "Epoch 400, Loss: 0.0005997801199555397\n",
+      "Epoch 600, Loss: 0.0002765449171420187\n",
+      "Epoch 800, Loss: 0.00015357507800217718\n",
+      "Epoch 1000, Loss: 0.00010305475007044151\n",
+      "Epoch 1200, Loss: 8.556732791475952e-05\n",
+      "Epoch 1400, Loss: 8.700751641299576e-05\n",
+      "Epoch 1600, Loss: 6.245037366170436e-05\n",
+      "Epoch 1800, Loss: 5.778333797934465e-05\n",
+      "Epoch 2000, Loss: 7.259444100782275e-05\n"
      ]
     },
     {
@@ -65,7 +64,7 @@
        "Text(0.5, 1.0, 'Training Loss Over Time')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -85,6 +84,7 @@
     "import torch.nn as nn\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "\n",
     "# Manually set the random seed for reproducibility\n",
     "torch.manual_seed(42)\n",
@@ -207,11 +207,8 @@
     "\n",
     "    # Print loss every 200 epochs\n",
     "    # This is useful for monitoring the training process and ensuring that the model is learning\n",
-    "    if epoch % 200 == 0:\n",
-    "        print(f'Epoch {epoch}, Loss: {loss.item()}')\n",
-    "\n",
-    "# Print final loss\n",
-    "print(f'Epoch {epoch}, Loss: {loss.item()}')\n",
+    "    if (epoch + 1) % 200 == 0:\n",
+    "        print(f'Epoch {epoch + 1}, Loss: {loss.item()}')\n",
     "\n",
     "# Plotting loss over epochs\n",
     "plt.plot(losses)\n",
@@ -225,7 +222,7 @@
    "id": "b0bd8a15",
    "metadata": {},
    "source": [
-    "We successfully trained our PINN. As we can see, the loss is now negligible (for our current purposes) at a value of roughly $7.26 \\times 10^{-5}$ in 1999 epochs. Now we will utilize this PINN to actually evaluate our PDE before moving onto our Torchdyn architecture.\n",
+    "We successfully trained our PINN. As we can see, the loss is now negligible (for our current purposes) at a value of roughly $7.26 \\times 10^{-5}$ in 2000 epochs. Now we will utilize this PINN to actually evaluate our PDE before moving onto our Torchdyn architecture.\n",
     "<br><br>\n",
     "As a sidenote, I've been using a standard matplot line plot to visualize the evolution of the diffusion equation since it felt intuitive and a nice starting point. For this notebook, I'll be utilizing heatmaps and likely an animated heatmap for the Torchdyn PINN, as I feel that will be a useful tool moving forward."
    ]
@@ -240,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5a3bc783",
    "metadata": {},
    "outputs": [
@@ -266,6 +263,13 @@
     "with torch.no_grad():\n",
     "    U = model(xt).reshape(100, 100)  # reshape back to [x, t] grid\n",
     "\n",
+    "# Save the results in a DataFrame\n",
+    "df = pd.DataFrame({\n",
+    "    'x': X.flatten().numpy(),\n",
+    "    't': T.flatten().numpy(),\n",
+    "    'u': U.flatten().numpy()\n",
+    "})\n",
+    "\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.contourf(T, X, U, 100, cmap='inferno')\n",
     "plt.xlabel(\"Time t\")\n",
@@ -285,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d4196648",
    "metadata": {},
    "outputs": [
@@ -343,10 +347,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6edb806c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'generate_trajectory' from 'torchdyn.datasets' (c:\\Users\\tobys\\miniconda3\\envs\\star-pinn\\lib\\site-packages\\torchdyn\\datasets\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Our torchdyn imports\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchdyn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m NeuralODE\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchdyn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m generate_trajectory\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchdyn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataControl\n\u001b[0;32m     11\u001b[0m torch\u001b[38;5;241m.\u001b[39mmanual_seed(\u001b[38;5;241m42\u001b[39m)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'generate_trajectory' from 'torchdyn.datasets' (c:\\Users\\tobys\\miniconda3\\envs\\star-pinn\\lib\\site-packages\\torchdyn\\datasets\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
