--- a/dev_notebooks/black_scholes/pinn_black_scholes.ipynb
+++ b/dev_notebooks/black_scholes/pinn_black_scholes.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "a4411ee2",
    "metadata": {},
    "outputs": [],
@@ -63,9 +63,14 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.net = nn.Sequential(\n",
-    "            nn.Linear(2, 64),  nn.Tanh(),\n",
-    "            nn.Linear(64, 64), nn.Tanh(),\n",
-    "            nn.Linear(64, 1)\n",
+    "            nn.Linear(2, 32),  nn.ReLU(),\n",
+    "            nn.Linear(32, 32), nn.ReLU(),\n",
+    "            nn.Linear(32, 32), nn.ReLU(),\n",
+    "            nn.Linear(32, 32), nn.ReLU(),\n",
+    "            nn.Linear(32, 32), nn.ReLU(),\n",
+    "            nn.Linear(32, 32), nn.ReLU(),\n",
+    "            nn.Linear(32, 32), nn.ReLU(),\n",
+    "            nn.Linear(32, 1)\n",
     "        )\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -95,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "70b87e74",
    "metadata": {},
    "outputs": [],
@@ -146,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "ebdbe6f7",
    "metadata": {},
    "outputs": [
@@ -154,8 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weights - PDE: 0.5, BC: 0.3, IC: 0.3\n",
-      "Epoch 0, Loss: 8313.515, PDE Loss: 0.000, BC Loss: 23208.738, IC Loss: 4502.976, LR: 0.001000\n"
+      "Weights - PDE: 14.46, BC: 0.086, IC: 0.05\n"
      ]
     },
     {
@@ -170,40 +174,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 500, Loss: 4731.242, PDE Loss: 6.097, BC Loss: 13706.221, IC Loss: 2054.426, LR: 0.001000\n",
-      "Epoch 1000, Loss: 2700.310, PDE Loss: 6.791, BC Loss: 8079.593, IC Loss: 910.122, LR: 0.001000\n",
-      "Epoch 1500, Loss: 1443.498, PDE Loss: 2.390, BC Loss: 4447.546, IC Loss: 360.132, LR: 0.001000\n",
-      "Epoch 2000, Loss: 706.502, PDE Loss: 2.261, BC Loss: 2227.470, IC Loss: 123.768, LR: 0.001000\n",
-      "Epoch 2500, Loss: 305.925, PDE Loss: 2.542, BC Loss: 979.732, IC Loss: 35.782, LR: 0.001000\n",
-      "Epoch 3000, Loss: 112.101, PDE Loss: 1.806, BC Loss: 362.120, IC Loss: 8.540, LR: 0.001000\n",
-      "Epoch 3500, Loss: 33.222, PDE Loss: 0.704, BC Loss: 107.663, IC Loss: 1.904, LR: 0.001000\n",
-      "Epoch 4000, Loss: 7.789, PDE Loss: 0.391, BC Loss: 24.711, IC Loss: 0.601, LR: 0.001000\n",
-      "Epoch 4500, Loss: 1.853, PDE Loss: 0.156, BC Loss: 5.311, IC Loss: 0.606, LR: 0.001000\n",
-      "Epoch 5000, Loss: 1.050, PDE Loss: 0.090, BC Loss: 2.867, IC Loss: 0.482, LR: 0.000100\n",
-      "Epoch 5500, Loss: 0.966, PDE Loss: 0.085, BC Loss: 2.604, IC Loss: 0.475, LR: 0.000100\n",
-      "Epoch 6000, Loss: 0.883, PDE Loss: 0.081, BC Loss: 2.342, IC Loss: 0.467, LR: 0.000100\n",
-      "Epoch 6500, Loss: 0.802, PDE Loss: 0.078, BC Loss: 2.084, IC Loss: 0.459, LR: 0.000100\n",
-      "Epoch 7000, Loss: 0.720, PDE Loss: 0.073, BC Loss: 1.825, IC Loss: 0.454, LR: 0.000100\n",
-      "Epoch 7500, Loss: 0.634, PDE Loss: 0.062, BC Loss: 1.552, IC Loss: 0.456, LR: 0.000100\n",
-      "Epoch 8000, Loss: 0.552, PDE Loss: 0.056, BC Loss: 1.303, IC Loss: 0.444, LR: 0.000100\n",
-      "Epoch 8500, Loss: 0.480, PDE Loss: 0.052, BC Loss: 1.090, IC Loss: 0.424, LR: 0.000100\n",
-      "Epoch 9000, Loss: 0.419, PDE Loss: 0.047, BC Loss: 0.919, IC Loss: 0.401, LR: 0.000100\n",
-      "Epoch 9500, Loss: 0.372, PDE Loss: 0.042, BC Loss: 0.782, IC Loss: 0.388, LR: 0.000100\n"
+      "Epoch 0, Loss: 2224.400, PDE Loss: 0.000, BC Loss: 23242.812, IC Loss: 4510.353, LR: 0.005000\n",
+      "Epoch 500, Loss: 17.155, PDE Loss: 0.001, BC Loss: 14.333, IC Loss: 318.196, LR: 0.000000\n",
+      "Epoch 1000, Loss: 17.142, PDE Loss: 0.001, BC Loss: 15.056, IC Loss: 316.669, LR: 0.000000\n",
+      "Epoch 1500, Loss: 17.125, PDE Loss: 0.001, BC Loss: 15.734, IC Loss: 315.170, LR: 0.000000\n",
+      "Epoch 2000, Loss: 17.107, PDE Loss: 0.001, BC Loss: 16.299, IC Loss: 313.851, LR: 0.000000\n",
+      "Epoch 2500, Loss: 17.088, PDE Loss: 0.001, BC Loss: 16.645, IC Loss: 312.864, LR: 0.000000\n"
      ]
     }
    ],
    "source": [
     "# Initialize model, optimizer, and training parameters\n",
     "model = blackScholesPINN()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
     "\n",
-    "epochs = 10000\n",
+    "epochs = 4000\n",
     "loss_history = []\n",
     "\n",
-    "# Weights for each loss component (tuned via trial and error)\n",
-    "pde_weight = 0.5\n",
-    "bc_weight = 0.3\n",
-    "ic_weight = 0.3\n",
+    "# Weights for each loss component (tuned via a series of sweeps)\n",
+    "pde_weight = 14.46\n",
+    "bc_weight = 0.086\n",
+    "ic_weight = 0.05\n",
     "\n",
     "print(f'Weights - PDE: {pde_weight}, BC: {bc_weight}, IC: {ic_weight}')\n",
     "\n",
@@ -248,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "6e078220",
    "metadata": {},
    "outputs": [
