--- a/dev_notebooks/black_scholes/pinn_black_scholes.ipynb
+++ b/dev_notebooks/black_scholes/pinn_black_scholes.ipynb
@@ -28,7 +28,8 @@
     "* $r$: Risk-free interest rate\n",
     "\n",
     "---\n",
-    "\n"
+    "\n",
+    "$$\n"
    ]
   },
   {
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "70b87e74",
    "metadata": {},
    "outputs": [],
@@ -125,6 +126,8 @@
     "\n",
     "    bc_low = model(torch.cat((S0, t), dim=1))\n",
     "    bc_high = model(torch.cat((S_high, t), dim=1))\n",
+    "    # This is the boundary for a call option\n",
+    "    # It would be K - S_max for a put option\n",
     "    expected_high = S_max - K * torch.exp(-r * (T - t))\n",
     "\n",
     "    return torch.mean(bc_low.pow(2)) + torch.mean((bc_high - expected_high).pow(2))\n",
